merged orbisgis_wps into trunk  * Merged commons_wps into commons  * replaced gdms by gdms_wps and gdmsql  * merged orbisgis changes into trunk to support the few Gdms API changes.  * SQL Completion is severly reduced for now, but it will benefit of a rewrite later.